<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="dialpad_0_number">0</string>
    <string name="dialpad_1_number">1</string>
    <string name="dialpad_2_number">2</string>
    <string name="dialpad_3_number">3</string>
    <string name="dialpad_4_number">4</string>
    <string name="dialpad_5_number">5</string>
    <string name="dialpad_6_number">6</string>
    <string name="dialpad_7_number">7</string>
    <string name="dialpad_8_number">8</string>
    <string name="dialpad_9_number">9</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">\#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters" />
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters" />
    <string name="dialpad_pound_letters" />
    <string name="description_dialpad_overflow">More options</string>
    <string name="description_delete_button">backspace</string>
    <string name="description_image_button_plus">plus</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="default_notification_description">Default sound (%1$s)</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Mobile network not available</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">"You can't make outgoing calls while call barring is on."</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="incall_error_missing_voicemail_number">Voicemail number unknown.</string>
    <string name="config_export_vcard_type">default</string>
    <string name="config_import_vcard_type">default</string>
    <string name="config_export_file_prefix" />
    <string name="config_export_file_suffix" />
    <string name="config_export_file_extension">vcf</string>
    <string name="config_export_extensions_to_consider" />
    <string name="toast_text_copied">Text copied</string>
    <string name="call_custom">Call %s</string>
    <string name="call_home">Call home</string>
    <string name="call_mobile">Call mobile</string>
    <string name="call_work">Call work</string>
    <string name="call_fax_work">Call work fax</string>
    <string name="call_fax_home">Call home fax</string>
    <string name="call_pager">Call pager</string>
    <string name="call_other">Call</string>
    <string name="call_callback">Call callback</string>
    <string name="call_car">Call car</string>
    <string name="call_company_main">Call company main</string>
    <string name="call_isdn">Call ISDN</string>
    <string name="call_main">Call main</string>
    <string name="call_other_fax">Call fax</string>
    <string name="call_radio">Call radio</string>
    <string name="call_telex">Call telex</string>
    <string name="call_tty_tdd">Call TTY/TDD</string>
    <string name="call_work_mobile">Call work mobile</string>
    <string name="call_work_pager">Call work pager</string>
    <string name="call_assistant">Call %s</string>
    <string name="call_mms">Call MMS</string>
    <string name="sms_custom">Text %s</string>
    <string name="sms_home">Text home</string>
    <string name="sms_mobile">Text mobile</string>
    <string name="sms_work">Text work</string>
    <string name="sms_fax_work">Text work fax</string>
    <string name="sms_fax_home">Text home fax</string>
    <string name="sms_pager">Text pager</string>
    <string name="sms_other">Text</string>
    <string name="sms_callback">Text callback</string>
    <string name="sms_car">Text car</string>
    <string name="sms_company_main">Text company main</string>
    <string name="sms_isdn">Text ISDN</string>
    <string name="sms_main">Text main</string>
    <string name="sms_other_fax">Text fax</string>
    <string name="sms_radio">Text radio</string>
    <string name="sms_telex">Text telex</string>
    <string name="sms_tty_tdd">Text TTY/TDD</string>
    <string name="sms_work_mobile">Text work mobile</string>
    <string name="sms_work_pager">Text work pager</string>
    <string name="sms_assistant">Text %s</string>
    <string name="sms_mms">Text MMS</string>
    <string name="description_video_call">Video call.</string>
    <string name="clearFrequentsConfirmation_title">Clear frequently contacted?</string>
    <string name="clearFrequentsConfirmation">"You'll clear the frequently contacted list in the People and Phone apps, and force email apps to learn your addressing preferences from scratch."</string>
    <string name="clearFrequentsProgress_title">Clearing frequently contacted…</string>
    <string name="status_available">Available</string>
    <string name="status_away">Away</string>
    <string name="status_busy">Busy</string>
    <string name="contactsList">Contacts</string>
    <string name="local_invisible_directory">Other</string>
    <string name="directory_search_label">Directory</string>
    <string name="local_search_label">All contacts</string>
    <string name="user_profile_contacts_list_header">Me</string>
    <string name="search_results_searching">Searching…</string>
    <string name="foundTooManyContacts">More than %d found.</string>
    <string name="listFoundAllContactsZero">No contacts</string>
    <string name="description_quick_contact_for">Quick contact for %1$s</string>
    <string name="missing_name">(No name)</string>
    <string name="favoritesFrequentCalled">Frequently called</string>
    <string name="favoritesFrequentContacted">Frequently contacted</string>
    <string name="description_view_contact_detail">View contact</string>
    <string name="list_filter_phones">All contacts with phone numbers</string>
    <string name="view_updates_from_group">View updates</string>
    <string name="account_phone">Phone-only, unsynced</string>
    <string name="nameLabelsGroup">Name</string>
    <string name="nicknameLabelsGroup">Nickname</string>
    <string name="full_name">Name</string>
    <string name="name_given">First name</string>
    <string name="name_family">Last name</string>
    <string name="name_prefix">Name prefix</string>
    <string name="display_options_sort_list_by">Sort by</string>
    <string name="display_options_view_names_as">Name format</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="vibrate_on_ring_title">Also vibrate for calls</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="dtmf_tone_enable_title">Dialpad tones</string>
    <string name="contact_display_options_category_title">Contact display options</string>
    <string name="sounds_and_vibrate_category_title">Sounds and vibrate</string>
    <string name="other_settings_title">Other</string>
</resources>